--- a/scss/blocks/_services.scss
+++ b/scss/blocks/_services.scss
@@ -74,6 +74,12 @@
 .text--design {
     margin-top: 83px;
 }
+.text--prod{
+    margin-top: 157px;
+}
+.text--mahagement{
+    margin-top: 157px;
+}
 .main__text--item {
     margin-top: 24px;
 }
