--- a/scss/blocks/_services.scss
+++ b/scss/blocks/_services.scss
@@ -68,6 +68,7 @@
     line-height: 25px;
     color: #B1B1B1;
 }
+// спец отступы для текста в карточках услуг
 .text--cyber {
     margin-top: 132px;
 }
@@ -80,6 +81,7 @@
 .text--mahagement{
     margin-top: 157px;
 }
+// спец отступы для текста в карточках услуг**
 .main__text--item {
     margin-top: 24px;
 }
