--- a/scss/blocks/_services.scss
+++ b/scss/blocks/_services.scss
@@ -68,7 +68,7 @@
     line-height: 25px;
     color: #B1B1B1;
 }
-// спец отступы для текста в карточках услуг
+// спец отступы для текста в карточках услуг!
 .text--cyber {
     margin-top: 132px;
 }
