--- a/scss/blocks/_last-proj.scss
+++ b/scss/blocks/_last-proj.scss
@@ -1,6 +1,5 @@
 .last-projects__section {
     margin-top: 240px;
-    padding-bottom: 100px;
 }
 
 .last-projects__content {
@@ -111,5 +110,25 @@
     }
     .slide-2{
         opacity: 1;
+    }
+}
+
+
+
+
+.proj--dop--text {
+    margin-top: 70px;
+    text-align: center;
+    
+}
+.dop--text {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 35px;
+    text-align: center;
+    color: #FFFFFF;
+    border-bottom: 1px solid white;
+    &:hover{
+        opacity: 0.7;
     }
 }
