--- a/scss/blocks/_last-proj.scss
+++ b/scss/blocks/_last-proj.scss
@@ -58,6 +58,9 @@
             top: calc(100%/2 - 10px);
             right: 25px;
             cursor: pointer;
+            &:hover{
+                opacity: 0.7;
+            }
         }
     }
 }
