--- a/scss/blocks/_our-clients.scss
+++ b/scss/blocks/_our-clients.scss
@@ -26,3 +26,100 @@
 }
 .clints__item {
 }
+
+
+
+
+
+
+
+
+//testing
+.slider {
+    position: relative;
+    width: 1060px;
+    height: 200px;
+    margin: 50px auto 0;
+    /* Чтобы во время перетаскивания слайда ничего не выделить внутри него */
+    user-select: none;
+    /* Чтобы запретить скролл страницы, если мы начали двигать слайдер по оси X */
+    touch-action: pan-y;
+  }
+  
+  /* Если где-то внутри слайдера будут изображения,
+  то нужно задать им pointer-events: none,
+  чтобы они не перетаскивались мышью */
+  
+  .slider img {
+    poiner-events: none;
+  }
+  
+  .slider-list {
+    width: 1060px;
+    height: 250px;
+    overflow: hidden;
+    .slide--text{
+        font-weight: 350;
+        font-size: 24px;
+        line-height: 35px;
+        color: #FFFFFF
+    }
+    .slide--sign{
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 29px;
+        color: #A0A0A0;
+        margin-top: 20px;
+    }
+  }
+  
+  .slider-list.grab {
+    cursor: grab;
+  }
+  
+  .slider-list.grabbing{
+    cursor: grabbing;
+  }
+  
+  .slider-track {
+    display: flex;
+  }
+  
+  .slide {
+    width: 500px;
+    height: 250px;
+    /* Чтобы слайды не сжимались */
+    flex-shrink: 0;
+    /* Увеличиваем и центрируем цифру внутри слайда */
+    // font-size: 50px;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+    // border: 1px solid #000;
+    background-color: #131224;
+    padding: 40px;
+    margin-left: 30px;
+    border-radius: 10px;
+  }
+  
+  .slider-arrows {
+    margin-top: 15px;
+    text-align: center;
+  }
+  
+  .next,
+  .prev {
+    background: none;
+    border: none;
+    margin: 0 10px;
+    font-size: 30px;
+    cursor: pointer;
+   
+    color: #D9D9D9;
+  }
+  
+  .next.disabled,
+  .prev.disabled {
+    opacity: .25;
+    pointer-events: none;
+  }
