add footer and connect block

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -108,3 +108,6 @@ main{
 @import "./blocks/services";
 @import "./blocks/last-proj";
 @import "./blocks/our-clients";
+@import "./blocks/review";
+@import "./blocks/connect";
+@import "./blocks/footer";
