--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,15 +1,13 @@
 footer{
     margin-top: 240px;
+    padding-bottom: 115px;
 }
 .footer__content {
     display: flex;
     align-items: center;
     gap: 103px;
 }
-.container {
-}
-.footer__logo {
-}
+
 .footer__links {
     
     a{
