--- a/scss/blocks/_review.scss
+++ b/scss/blocks/_review.scss
@@ -1,6 +1,13 @@
 .review__section{
-    margin-top: 240px;
-    height: 470px;
+    margin-top: 140px;
+    padding-top: 50px;
+    padding-bottom: 90px;
+    height: 670px;
+    background-image: url('/img/back-light.png');
+    background-size: cover;
+    background-size: 100% 100%;
+    background-position: top -30px left 0px;
+    background-repeat: no-repeat;
 }
 
 
