--- a/scss/blocks/_form.scss
+++ b/scss/blocks/_form.scss
@@ -4,8 +4,7 @@
         margin-top: 10px; 
     }
 }
-.contact-form {
-}
+
 .contact-form__title {
     font-weight: 400;
     font-size: 35px;
@@ -13,16 +12,7 @@
     text-align: start;
     color: #FFFFFF;
 }
-.preloader {
-}
-.contact-form__message {
-}
-.contact__row {
-}
-.contact-form__input-wrapper {
-}
-.contact-form__input-wrapper_name {
-}
+
 .contact-form__input {
     background-color: #050412;
     color: white;
@@ -39,6 +29,9 @@
         width: 357px;
         border-bottom: 1px solid white;
         padding-bottom: 15px;
+        &:focus{
+            box-shadow: 0px 5px 15px -5px white;
+        }
     }
     @media (max-width:1370px) {
         gap: 50px;
@@ -66,8 +59,7 @@
         width: 1000px;
     }
 }
-.contact-form__input_theme {
-}
+
 .contact-form__button {
     margin-top: 60px;
     font-weight: 350;
