--- a/scss/blocks/_last-proj.scss
+++ b/scss/blocks/_last-proj.scss
@@ -135,3 +135,43 @@
         opacity: 0.7;
     }
 }
+
+
+
+// For projects filter
+
+
+.projects__wrapper {
+}
+.projects__filter {
+    display: flex;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 44px;
+    text-align: center;
+    color: #A0A0A0;
+}
+.projects__item {
+    padding-left: 30px;
+    padding-right: 30px;
+    padding: 15px 30px 15px 30px;
+    cursor: pointer;
+    &::before{
+        content: "";
+        display: block;
+        width: calc(100% + 60px);
+        height: 2px;
+        background-color: #A0A0A0;
+        margin-left: -30px;
+    }
+    &.active{
+        color: #FFFFFF;
+        &::before{
+            content: "";
+            display: block;
+            width: calc(100% + 60px);
+            height: 3px;
+            background: linear-gradient(90.52deg, #22A1FF -15.53%, #CA1FFF 54.35%, #FFE101 117.36%);
+        }
+    }
+}
