--- a/scss/blocks/_project.scss
+++ b/scss/blocks/_project.scss
@@ -124,9 +124,34 @@
 
 .btn__row--next--prev{
     margin-top: 150px;
+    margin-left: 100px;
     a{
-        padding-top: 50px;
-        padding-bottom: 50px;
-        padding: 90px 25px;
+        display: block;
+        border: 1px solid white;
+        border-radius: 50%;
+        padding: 100px 50px;
+        color: white;
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 35px;
+        transition: all 0.3s;
+        &:hover{
+            box-shadow: 0px 0px 5px 3px white;
+            transition: all 0.3s;
+        }
     }
+    .right--btn{
+        padding: 100px 10px;
+    }
+    display: flex;
+    align-items: center;
+    gap: 50px;
+}
+
+
+.rainbow--line{
+    display: block;
+    width: 304px;
+    height: 2px;
+    background: linear-gradient(90.52deg, #22A1FF -15.53%, #CA1FFF 54.35%, #FFE101 117.36%);
 }
