--- a/scss/blocks/_project.scss
+++ b/scss/blocks/_project.scss
@@ -5,6 +5,13 @@
         background-clip: text;
         -webkit-text-fill-color: transparent;
 }
+.our-projects__content-title{
+    background: linear-gradient(90.52deg, #22A1FF -5.53%, #CA1FFF 15.35%, #FFE101 40.36%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+}
 
 .project__wrapper {
     margin-top: 50px;
