--- a/scss/blocks/_form.scss
+++ b/scss/blocks/_form.scss
@@ -1,7 +1,7 @@
 .form__wrapper {
     margin-top: 70px;
     @media (max-width:1370px){
-        margin-top: 10px; 
+        margin-top: 70px; 
     }
 }
 
@@ -20,6 +20,9 @@
     font-size: 24px;
     line-height: 35px;
     border-bottom: 1px solid white;
+}
+.contact__row{
+    margin-top: 70px;
 }
 .w-357{
     display: flex;
@@ -40,7 +43,7 @@
             
         }
         flex-wrap: wrap;
-        margin-top: 10px;
+        margin-top: 70px;
     }
 }
 
@@ -54,6 +57,7 @@
     }
 }
 .contact-form__input_message {
+    margin-top: 70px;
     width: 1259px;
     @media (max-width:1370px){
         width: 1000px;
