--- a/scss/blocks/_project.scss
+++ b/scss/blocks/_project.scss
@@ -116,6 +116,20 @@
     display: inline-block;
 }
 //
+
+// extenci
+.extenci--project{
+    .proj_picture_big{
+        width: 1082px;
+        height: 1300px;
+        img{
+           width: 100%;
+           height: 100%;
+        }
+    }
+}
+
+//ETENCI END
 .basic--text{
     font-weight: 350;
     font-size: 30px;
