create cyber page

--- a/scss/blocks/_project.scss
+++ b/scss/blocks/_project.scss
@@ -130,6 +130,21 @@
 }
 
 //ETENCI END
+//cyberstudent
+.cyber-student--project{
+    .hero__text-key{
+        margin-top: 50px;
+    }
+    .cyber-student_rainbow{
+        background: linear-gradient(90.52deg, #22A1FF -5.53%, #CA1FFF 24.35%, #FFE101 107.36%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    display: inline-block;
+    }
+}
+//cyber student END
 .basic--text{
     font-weight: 350;
     font-size: 30px;
