--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,6 +1,11 @@
 footer{
     margin-top: 240px;
     padding-bottom: 115px;
+    @media (max-width:768px){
+        .footer--item{
+            margin-left: 50px;
+        }
+    }
 }
 .footer__content {
     display: flex;
@@ -9,9 +14,13 @@ footer{
     @media (min-width:1900px) {
         gap: 250px;
     }
+    @media (max-width:768px){
+        flex-wrap: wrap;
+    }
 }
 
 .footer__links {
+    
     
     a{
         font-size: 24px;
