--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -3,6 +3,7 @@
     z-index: -1;
     @media (max-width:768px){
         padding-top: 0px;
+        z-index: -1;
     }
     background-image: url('/img/back-light.png');
     background-size: cover;
@@ -16,7 +17,6 @@
 
 .hero__content {
     position: relative;
-   
 }
 
 .hero__title {
@@ -32,6 +32,7 @@
     @media (max-width:768px){
         font-size: 18px;
         line-height: 30px;
+        z-index: -1;
     }
 }
 // .rainbow--text-hero{
