--- a/scss/blocks/_connect.scss
+++ b/scss/blocks/_connect.scss
@@ -24,10 +24,15 @@
     font-weight: 400;
     font-size: 45px;
     line-height: 55px;
-    @media (max-width:768px){
+    @media (max-width:340px){
         font-size: 22px;
         line-height: 28px;
         margin-left: 20px;
+    }
+    @media (max-width:768px){
+        font-size: 24px;
+        line-height: 28px;
+        margin-left: 30px;
     }
 }
 .connect__desk {
@@ -35,12 +40,19 @@
     font-weight: 350;
     font-size: 24px;
     line-height: 35px;
-    @media (max-width:768px){
+    @media (max-width:340px){
         margin-top: 20px;
         font-size: 14px;
         line-height: 18px;
         margin-left: 20px;
     }
+    @media (max-width:768px){
+        margin-top: 20px;
+        font-size: 18px;
+        line-height: 22px;
+        margin-left: 30px;
+    }
+    
 }
 .connect__button {
     margin-left: 220px;
@@ -61,7 +73,7 @@
         opacity: 0.8;
         box-shadow: 0px 0px 5px 3px white;
     }
-    @media (max-width:768px){
+    @media (max-width:340px){
         margin-top: 40px;
         margin-left: 90px;
         width: 124px;
@@ -69,5 +81,24 @@
         padding-top: 43px;
         font-size: 18px;
         line-height: 22px;
+    }
+    
+    @media (max-width:768px){
+        margin-top: 40px;
+        margin-left: 90px;
+        width: 248px;
+        height: 248px;
+        padding-top: 107px;
+        font-size: 24px;
+        line-height: 32px;
+    }
+    @media (max-width:400px){
+        margin-top: 40px;
+        margin-left: 110px;
+        width: 150px;
+        height: 150px;
+        padding-top: 60px;
+        font-size: 18px;
+        line-height: 28px;
     }
 }
