--- a/scss/blocks/_last-proj.scss
+++ b/scss/blocks/_last-proj.scss
@@ -1,6 +1,8 @@
 .last-projects__section {
     margin-top: 240px;
-    
+    @media (max-width:768px) {
+        margin-top: 100px;
+    }
 }
 
 .last-projects__content {
@@ -36,10 +38,15 @@
     @media (min-width:1900px) {
         gap: 200px;
     }
-    @media (max-width:330px){
-        padding-left: 10px;
-    }
+    
     @media (max-width:380px){
+        padding-left: 30px;
+    }
+    @media (max-width:400px){
+        padding-left: 55px;
+        margin-top: 50px;
+    }
+    @media (max-width:330px){
         padding-left: 30px;
     }
 }
@@ -70,13 +77,7 @@
         }
     }
     .proj__text {
-        @media (min-width:1900px) {
-            height: 200px;
-        }
-        @media (max-width:768px){
-            height: 120px;
-            width: 250px;
-        }
+        
         background-color: #131225;
         padding-left: 36px;
         border-radius: 10px;
@@ -91,7 +92,7 @@
             @media (max-width:768px){
                 font-size: 18px;
                 line-height: 20px;
-                padding-top: 20px;
+                padding-top: 15px;
             }
         }
         .text__desk {
@@ -103,6 +104,7 @@
             @media (max-width:768px){
                 font-size: 18px;
                 line-height: 18px;
+                margin-top: 15px;
             }
         }
         .text__btn--more {
@@ -113,6 +115,17 @@
             &:hover{
                 opacity: 0.7;
             }
+        }
+        @media (min-width:1900px) {
+            height: 200px;
+        }
+        @media (max-width:768px){
+            height: 120px;
+            width: 250px;
+        }
+        @media (max-width:400px){
+            height: 100px;
+            padding-left: 20px;
         }
     }
 }
