--- a/scss/blocks/_services.scss
+++ b/scss/blocks/_services.scss
@@ -15,8 +15,20 @@
     -webkit-text-fill-color: transparent;
 }
 
+.services__title{
+    @media (max-width:400px){
+        font-size: 42px;
+        margin-left: 30px;
+        background: linear-gradient(90.52deg, #22A1FF -5.53%, #CA1FFF 14.35%, #FFE101 40.36%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+}
 .services__desk {
     margin-top: 10px;
+    
 }
 .main--desk {
     font-style: normal;
@@ -24,6 +36,12 @@
     font-size: 24px;
     line-height: 30px;
     color: #B1B1B1;
+    @media (max-width:400px){
+        margin-left: 30px;
+        font-size: 16px;
+        line-height: 20px;
+        padding-right: 10px;
+    }
 }
 .services__list {
     margin-top: 90px;
@@ -36,6 +54,10 @@
         @media (max-width:768px){
             flex-wrap: wrap;
         }
+    }
+    @media (max-width:400px){
+        margin-top: 40px;
+        margin-left: 10px;
     }
 }
 
