--- a/scss/blocks/_last-proj.scss
+++ b/scss/blocks/_last-proj.scss
@@ -38,14 +38,18 @@
     @media (min-width:1900px) {
         gap: 200px;
     }
-    
-    @media (max-width:380px){
-        padding-left: 30px;
+    @media (max-width:768px){
+        padding-left: 45px;
+        margin-top: 50px;
     }
     @media (max-width:400px){
         padding-left: 55px;
         margin-top: 50px;
     }
+    @media (max-width:380px){
+        padding-left: 30px;
+    }
+    
     @media (max-width:330px){
         padding-left: 30px;
     }
@@ -64,7 +68,9 @@
         width: 250px;  
     }
     .proj__img {
-        
+        @media (max-width:768px) and (min-width:440px){
+            height: 150px;  
+        }
         img{
             @media (min-width:768px) {
                 max-width: 100%;
@@ -121,11 +127,17 @@
         }
         @media (max-width:768px){
             height: 120px;
-            width: 250px;
+            width: 350px;
         }
         @media (max-width:400px){
+            height: 120px;
+            width: 300px;
+        }
+        
+        @media (max-width:340px){
             height: 100px;
             padding-left: 20px;
+            width: 250px;
         }
     }
 }
@@ -142,8 +154,15 @@
         width: 600px;
     }
     @media (max-width:768px){
+        width: 350px;
+        height: 150px;
+    }
+    @media (max-width:400px){
         width: 250px;
         height: 150px;
+    }
+    @media (max-width:340px){
+        width: 250px;
     }
 }
 
@@ -164,11 +183,15 @@
         width: 600px;
     }
     @media (max-width:768px){
-        width: 300px;
-    }
-    @media (max-width:768px){
-        width: 250px;
+        width: 350px;
         height: 150px;
+    }
+    @media (max-width:400px){
+        width: 300px;
+        height: 150px;
+    }
+    @media (max-width:340px){
+        width: 250px;
     }
 }
 
@@ -192,7 +215,11 @@
         background-size: cover;
     }
     @media (max-width:768px){
+        background-position: 0px 0px;
         background-size: cover;
+    }
+    @media (max-width:768px) and (min-width:440px){
+        background-position: 0px -20px; 
     }
 }
 
