--- a/scss/blocks/_connect.scss
+++ b/scss/blocks/_connect.scss
@@ -73,6 +73,9 @@
         opacity: 0.8;
         box-shadow: 0px 0px 5px 3px white;
     }
+    @media (min-width: 1600px){
+        margin-left: 450px;
+    }
     @media (max-width:340px){
         margin-top: 40px;
         margin-left: 90px;
