--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -20,7 +20,6 @@
         .hero__content_button{
             display: block;
             max-width: 250px;
-           
         }
         .connecting__button{
             margin: 0 auto;
@@ -52,6 +51,13 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
     -webkit-text-fill-color: transparent;
+    @media (min-width: 1600px) {
+        background: linear-gradient(90.52deg, #22A1FF 25.53%, #CA1FFF 45.35%, #FFE101 60.36%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
     @media (max-width:768px){
         font-size: 24px;
         line-height: 30px;
@@ -84,6 +90,10 @@
     font-size: 150px;
     line-height: 150px;
     color: #FFFFFF;
+    span{
+        font-family: 'Bebas Neue';
+        font-weight: 200;
+    }
     @media (max-width:768px){
         font-size: 70px;
         line-height: 60px;
