--- a/scss/blocks/_project.scss
+++ b/scss/blocks/_project.scss
@@ -24,12 +24,22 @@
     @media (min-width:1900px) {
         gap: 100px;
     }
+    @media (max-width:768px) {
+        display: block;
+        padding: 30px;
+    }
 }
 .hero__img {
+    @media (max-width: 768px) {
+        width: 100%;
+    }
     img{
         max-width: 500px;
         @media (min-width:1900px) {
             max-width: 750px;
+        }
+        @media (max-width: 768px) {
+            width: 100%;
         }
     }
     
@@ -37,6 +47,10 @@
 .hero__text {
     width: 540px;
     
+    @media (max-width: 768px) {
+        width: 100%;
+        margin-top: 40px;
+    }
 }
 .hero__text-desk {
     font-weight: 350;
@@ -45,6 +59,10 @@
     @media (min-width:1900px) {
         font-size: 32px;
         line-height: 35px;
+    }
+    @media (max-width: 768px) {
+        font-size: 18px;
+        line-height: 24px;
     }
 }
 .hero__text-key {
@@ -141,8 +159,8 @@
         width: 1082px;
         height: 1300px;
         img{
-           width: 100%;
-           height: 100%;
+            width: 100%;
+            height: 100%;
         }
     }
 }
@@ -195,13 +213,28 @@
     font-size: 30px;
     line-height: 44px;
     color: #FFFFFF;
+
+    @media (max-width: 768px) {
+        font-size: 18px;
+        line-height: 24px;
+        width: 100%;
+        padding: 30px;
+    }
 }
 
 .m150{
     margin-top: 150px;
+
+    @media (max-width: 768px) {
+        margin-top: 10px;
+    }
 }
 .m100{
     margin-top: 100px;
+
+    @media (max-width: 768px) {
+        margin-top: 20px;
+    }
 }
 
 // TASKS
@@ -217,11 +250,21 @@
     @media (min-width:1900px){
         margin-left: 200px;
     }
+    @media (max-width:768px){
+        margin-left: 30px;
+        display: block;
+        margin-top: 0px;
+        padding-right: 30px;
+    }
 }
 .tasks__col {
     display: flex;
     gap: 25px;
     align-items: center;
+    @media (max-width:768px){
+        margin-top: 30px;
+        
+    }
 }
 .grey--number {
     font-weight: 700;
@@ -245,6 +288,11 @@
         font-size: 40px;
         line-height: 42px;
     }
+    @media (max-width:768px){
+        font-size: 18px;
+        line-height: 20px;
+        width: 100%;
+    }
 }
 
 
@@ -253,6 +301,11 @@
     padding: 0px 50px;
     @media (min-width:1900px){
         margin-left: 200px;
+    }
+    @media (max-width:768px){
+        img{
+            width: 100%;
+        }
     }
 }
 
